force-app/main/default/objects/Case/fields/DialogueResult__c.field-meta.xml
<CustomField>
    <fullName>DialogueResult__c</fullName>
    <label>対話結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>