force-app/main/default/objects/Case/fields/DirectRepaymentP__c.field-meta.xml
<CustomField>
    <fullName>DirectRepaymentP__c</fullName>
    <label>直接追返Ｐ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>中身1</fullName>
            </value>
            <value>
                <fullName>中身2</fullName>
            </value>
            <value>
                <fullName>中身3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>