force-app/main/default/objects/Case/fields/DisasterChk__c.field-meta.xml
<CustomField>
    <fullName>DisasterChk__c</fullName>
    <label>災害チェック</label>
    <length>255</length>
    <type>Text</type>
</CustomField>