force-app/main/default/objects/Case/fields/DisasterVerification__c.field-meta.xml
<CustomField>
    <fullName>DisasterVerification__c</fullName>
    <label>災害名判別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>