force-app/main/default/objects/Case/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <label>排気量（単位：リットル）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>