force-app/main/default/objects/Case/fields/Document_Reminder_Incoming_Calls_Busines__c.field-meta.xml
<CustomField>
    <fullName>Document_Reminder_Incoming_Calls_Busines__c</fullName>
    <label>書類督促_入電_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>