force-app/main/default/objects/Case/fields/DocumentationShipping_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>DocumentationShipping_PostalCode__c</fullName>
    <label>書類発送_送付先郵便番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>