force-app/main/default/objects/Case/fields/DocumentDemand_AttributeOther__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_AttributeOther__c</fullName>
    <label>書類督促_会話相手属性その他</label>
    <length>80</length>
    <type>Text</type>
</CustomField>