force-app/main/default/objects/Case/fields/DocumentDemand_BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_BusinessContact__c</fullName>
    <label>書類督促_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>