force-app/main/default/objects/Case/fields/DocumentDemand_Documents_Report__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_Documents_Report__c</fullName>
    <formula>IF(IsNull(IncompleteNoticeCreationDate__c),ReturnedDocuments_Report__c,
        Incomplete_ReturnedDocuments_Report__c)</formula>
    <label>書類督促_返送書類_帳票用</label>
    <type>Text</type>
</CustomField>