force-app/main/default/objects/Case/fields/DocumentDemand_Incoming_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_Incoming_Departure_Date__c</fullName>
    <label>書類督促_入電/発信日時</label>
    <type>DateTime</type>
</CustomField>