force-app/main/default/objects/Case/fields/DocumentDemand_InquiryDetails__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_InquiryDetails__c</fullName>
    <label>書類督促_照会内容詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>