force-app/main/default/objects/Case/fields/DocumentDemand_LastPostedDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_LastPostedDate__c</fullName>
    <formula>IF(IsNull(IncompleteNoticeCreationDate__c),
        TEXT(YEAR(DateOfCreationOfDocumentDispatch__c)) &amp; &apos;年&apos; &amp; TEXT(MONTH(DateOfCreationOfDocumentDispatch__c)) &amp; &apos;月&apos; &amp; TEXT(DAY(DateOfCreationOfDocumentDispatch__c)) &amp; &apos;日に解約書類&apos;,
TEXT(YEAR(DATEVALUE(IncompleteNoticeCreationDate__c))) &amp; &apos;年&apos; &amp; TEXT(MONTH(DATEVALUE(IncompleteNoticeCreationDate__c))) &amp; &apos;月&apos; &amp; TEXT(DAY(DATEVALUE(IncompleteNoticeCreationDate__c))) &amp; &apos;日に書類不備&apos; )</formula>
    <label>書類督促_最終送付日_帳票用</label>
    <type>Text</type>
</CustomField>