force-app/main/default/objects/Case/fields/DocumentDemand_NumberOfApartment_Report__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_NumberOfApartment_Report__c</fullName>
    <formula>IF(TEXT(ReminderNoticeSender__c) == &quot;その他&quot;,Incomplete_NumberOfApartment__c,
IF(TEXT(ReminderNoticeSender__c) == &quot;請求者&quot;,&quot;&quot;,
IF(TEXT(ReminderNoticeSender__c) == &quot;契約者&quot;,&quot;&quot;,&quot;&quot;)))</formula>
    <label>書類督促_送付先番地・マンション_帳票用</label>
    <type>Text</type>
</CustomField>