force-app/main/default/objects/Case/fields/DocumentDemand_Person_Report__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_Person_Report__c</fullName>
    <formula>IF(TEXT(ReminderNoticeSender__c) == &quot;その他&quot;,Incomplete_Addressee_PersonInCharge__c,
IF(TEXT(ReminderNoticeSender__c) == &quot;請求者&quot;,AddresseeName_Formula__c,
IF(TEXT(ReminderNoticeSender__c) == &quot;契約者&quot;,ContractorName__c,&quot;&quot;)))</formula>
    <label>書類督促_宛名・担当者_帳票用</label>
    <type>Text</type>
</CustomField>