force-app/main/default/objects/Case/fields/DocumentDemand_PostalCode_Report__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_PostalCode_Report__c</fullName>
    <formula>IF(TEXT(ReminderNoticeSender__c) == &quot;その他&quot;,Incomplete_PostalCode__c,
IF(TEXT(ReminderNoticeSender__c) == &quot;請求者&quot;,PostalCode__c,
IF(TEXT(ReminderNoticeSender__c) == &quot;契約者&quot;,PostCode__c,&quot;&quot;)))</formula>
    <label>書類督促_送付先郵便番号_帳票用</label>
    <type>Text</type>
</CustomField>