force-app/main/default/objects/Case/fields/DocumentDemandContact__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemandContact__c</fullName>
    <label>書類督促_連絡事項</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>