force-app/main/default/objects/Case/fields/DocumentDispatch_AttributeOther__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_AttributeOther__c</fullName>
    <label>書類発送_会話相手属性その他</label>
    <length>80</length>
    <type>Text</type>
</CustomField>