force-app/main/default/objects/Case/fields/DocumentDispatch_IncomingCall_OutgoingCa__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_IncomingCall_OutgoingCa__c</fullName>
    <label>書類発送_入電/発信日時</label>
    <type>DateTime</type>
</CustomField>