force-app/main/default/objects/Case/fields/DocumentDispatch_IncomingCallerNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_IncomingCallerNumber__c</fullName>
    <label>書類発送_着信電話番号</label>
    <length>12</length>
    <type>Text</type>
</CustomField>