force-app/main/default/objects/Case/fields/DocumentDispatch_InquiryDetail__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_InquiryDetail__c</fullName>
    <label>書類発送_照会内容詳細</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>