force-app/main/default/objects/Case/fields/DocumentDispatch_ResponseDetails__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_ResponseDetails__c</fullName>
    <label>書類発送_回答内容</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>