force-app/main/default/objects/Case/fields/DocumentOutgoing_Incomplete_Person__c.field-meta.xml
<CustomField>
    <fullName>DocumentOutgoing_Incomplete_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類不備_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocumentOutgoing_Incomplete_Person_relat</relationshipName>
    <type>Lookup</type>
</CustomField>