force-app/main/default/objects/Case/fields/Documents_Document_Shipping_Report__c.field-meta.xml
<CustomField>
    <fullName>Documents_Document_Shipping_Report__c</fullName>
    <formula>If(INCLUDES(Documents_Document_Shipping__c,&apos;解約の確認書類一覧表&apos;),&apos;■ 解約の確認書類一覧表\n&apos;,&apos;&apos;)
&amp;
If(INCLUDES(Documents_Document_Shipping__c,&apos;自動車損害賠償責任保険承認請求書&apos;),&apos;■ 自動車損害賠償責任保険承認請求書\n&apos;,&apos;&apos;)
&amp;
If(INCLUDES(Documents_Document_Shipping__c,&apos;返信用封筒&apos;),&apos;■ 返信用封筒\n&apos;,&apos;&apos;)
&amp;
If(INCLUDES(Documents_Document_Shipping__c,&apos;権利譲渡に係わる確認書&apos;),&apos;■ 権利譲渡に係わる確認書\n&apos;,&apos;&apos;)
&amp;
If(INCLUDES(Documents_Document_Shipping__c,&apos;罹災確認書&apos;),&apos;■ 罹災確認書\n&apos;,&apos;&apos;)
&amp;
If(INCLUDES(Documents_Document_Shipping__c,&apos;自動車損害賠償責任保険承認請求書綴&apos;),&apos;■ 自動車損害賠償責任保険承認請求書綴　　&apos; &amp; text(AutomobileLiabilityInsuranceAuthorizatio__c) &amp; &apos;冊\n&apos;,&apos;&apos;)
&amp;
If(INCLUDES(Documents_Document_Shipping__c,&apos;その他&apos;),&apos;■ &apos; &amp; SendingDocuments_Other_Fields__c,&apos;&apos;)</formula>
    <label>書類発送_帳票用</label>
    <type>Text</type>
</CustomField>