force-app/main/default/objects/Case/fields/Documents_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>Documents_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類発送_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents_PersonInCharge_relation</relationshipName>
    <type>Lookup</type>
</CustomField>