force-app/main/default/objects/Case/fields/DocumentSending_Address__c.field-meta.xml
<CustomField>
    <fullName>DocumentSending_Address__c</fullName>
    <label>書類発送_送付先住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>