force-app/main/default/objects/Case/fields/DocumentSending_Addressee_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>DocumentSending_Addressee_PersonInCharge__c</fullName>
    <label>書類発送_宛名・担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>