force-app/main/default/objects/Case/fields/DocumentSending_Operation_Information__c.field-meta.xml
<CustomField>
    <fullName>DocumentSending_Operation_Information__c</fullName>
    <label>書類発送_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>