force-app/main/default/objects/Case/fields/Driver_AgeConditionChange__c.field-meta.xml
<CustomField>
    <fullName>Driver_AgeConditionChange__c</fullName>
    <label>運転者限定・年齢条件変更の有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>