force-app/main/default/objects/Case/fields/DriverLimitations__c.field-meta.xml
<CustomField>
    <fullName>DriverLimitations__c</fullName>
    <label>運転者限定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本人配偶者</fullName>
            </value>
            <value>
                <fullName>臨時運転（ベーシス）</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>