force-app/main/default/objects/Case/fields/DuplicateCoverageItem__c.field-meta.xml
<CustomField>
    <fullName>DuplicateCoverageItem__c</fullName>
    <label>補償重複項目</label>
    <length>100</length>
    <type>Text</type>
</CustomField>