force-app/main/default/objects/Case/fields/E_SupplyStop_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>E_SupplyStop_PersonInCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>自継停止_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>E_SupplyStop_PersonInCharge_relation</relationshipName>
    <type>Lookup</type>
</CustomField>