force-app/main/default/objects/Case/fields/E_SupplyStop_Today__c.field-meta.xml
<CustomField>
    <fullName>E_SupplyStop_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自継停止_本日</label>
    <type>Checkbox</type>
</CustomField>