force-app/main/default/objects/Case/fields/ElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTime__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>経過時間（現在-作成日）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>