force-app/main/default/objects/Case/fields/Enclosure__c.field-meta.xml
<CustomField>
    <fullName>Enclosure__c</fullName>
    <label>【帳票使用項目】今回お送りした書類</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>