force-app/main/default/objects/Case/fields/EquipmentConfirmation__c.field-meta.xml
<CustomField>
    <fullName>EquipmentConfirmation__c</fullName>
    <label>装備確認書　【セルフチェック】</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>