force-app/main/default/objects/Case/fields/ErrorCorrectionDate__c.field-meta.xml
<CustomField>
    <fullName>ErrorCorrectionDate__c</fullName>
    <label>エラー修正日</label>
    <type>Date</type>
</CustomField>