force-app/main/default/objects/Case/fields/ExcessRepairs__c.field-meta.xml
<CustomField>
    <fullName>ExcessRepairs__c</fullName>
    <label>車両超過修理費用</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>