force-app/main/default/objects/Case/fields/ExpectedSituation__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSituation__c</fullName>
    <label>見込み状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>見込み有り</fullName>
            </value>
            <value>
                <fullName>見込みなし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>