force-app/main/default/objects/Case/fields/ExpelContract__c.field-meta.xml
<CustomField>
    <fullName>ExpelContract__c</fullName>
    <label>はき出しorすい込み元契約</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>保険未付保</fullName>
            </value>
            <value>
                <fullName>他社</fullName>
            </value>
            <value>
                <fullName>当社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>