force-app/main/default/objects/Case/fields/ExplanationByPremiumRefund__c.field-meta.xml
<CustomField>
    <fullName>ExplanationByPremiumRefund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>保険料返戻による説明</label>
    <type>Checkbox</type>
</CustomField>