force-app/main/default/objects/Case/fields/Field1ContinuouslyRecordedPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>Field1ContinuouslyRecordedPolicyNumber__c</fullName>
    <label>継続計上済証券番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>