force-app/main/default/objects/Case/fields/Field1DocumentDispatch_IncomingCall_Pers__c.field-meta.xml
<CustomField>
    <fullName>Field1DocumentDispatch_IncomingCall_Pers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類発送_入電_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocumentDispatch_IncomingCall_relation</relationshipName>
    <type>Lookup</type>
</CustomField>