force-app/main/default/objects/Case/fields/FinancialInstitutionCode__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstitutionCode__c</fullName>
    <label>金融機関コード</label>
    <length>4</length>
    <type>Text</type>
</CustomField>