force-app/main/default/objects/Case/fields/Fire_DateRecorded__c.field-meta.xml
<CustomField>
    <fullName>Fire_DateRecorded__c</fullName>
    <label>火新異動＿計上日</label>
    <type>Date</type>
</CustomField>