force-app/main/default/objects/Case/fields/FirstFeeTransDate__c.field-meta.xml
<CustomField>
    <fullName>FirstFeeTransDate__c</fullName>
    <label>【帳票使用項目】初回保険料振替日</label>
    <length>40</length>
    <type>Text</type>
</CustomField>