force-app/main/default/objects/Case/fields/FirstFeeTransDateHosoku__c.field-meta.xml
<CustomField>
    <fullName>FirstFeeTransDateHosoku__c</fullName>
    <label>【帳票使用項目】初回保険料振替日補足</label>
    <length>40</length>
    <type>Text</type>
</CustomField>