force-app/main/default/objects/Case/fields/FirstShipment__c.field-meta.xml
<CustomField>
    <fullName>FirstShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初回発送</label>
    <type>Checkbox</type>
</CustomField>