force-app/main/default/objects/Case/fields/FixedAmountForBodilyInjury__c.field-meta.xml
<CustomField>
    <fullName>FixedAmountForBodilyInjury__c</fullName>
    <label>人傷定額払</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>傷害一時金</fullName>
            </value>
            <value>
                <fullName>部位症状(ベーシス)</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>