force-app/main/default/objects/Case/fields/FocusData__c.field-meta.xml
<CustomField>
    <fullName>FocusData__c</fullName>
    <formula>IF(len(StockNumberMainNumber__c) = 12, StockNumberMainNumber__c &amp; 
JiketsuSuspension_Registration_DateW__c &amp;
RPAD(Continuation_Type__c , 3 , &quot; &quot;)  &amp; 
IF(SuspensionOfJiketsuSuspensionItem_Suspen__c= true,&quot;1&quot;,&quot;&quot;),
&quot;&quot;)</formula>
    <label>FOCUS自継停止</label>
    <type>Text</type>
</CustomField>