force-app/main/default/objects/Case/fields/FOCUSDeath__c.field-meta.xml
<CustomField>
    <fullName>FOCUSDeath__c</fullName>
    <formula>IF(len(StockNumberMainNumber__c) = 12, StockNumberMainNumber__c &amp; 
JiketsuSuspension_Registration_DateW__c &amp;
RPAD(Continuation_Type__c , 3 , &quot; &quot;)  &amp; 
IF(SuspensionOfSuccession_DeathCancellation__c= true,&quot;2&quot;,&quot;&quot;),
&quot;&quot;)</formula>
    <label>FOCUS死亡解約</label>
    <type>Text</type>
</CustomField>