force-app/main/default/objects/Case/fields/ForcedPrintout__c.field-meta.xml
<CustomField>
    <fullName>ForcedPrintout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>強制印刷</label>
    <type>Checkbox</type>
</CustomField>