force-app/main/default/objects/Case/fields/Forwarded__c.field-meta.xml
<CustomField>
    <fullName>Forwarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回送あり</label>
    <type>Checkbox</type>
</CustomField>