force-app/main/default/objects/Case/fields/ForwardedItem__c.field-meta.xml
<CustomField>
    <fullName>ForwardedItem__c</fullName>
    <label>回送物</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申込書</fullName>
            </value>
            <value>
                <fullName>変更依頼書</fullName>
            </value>
            <value>
                <fullName>口座</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>