force-app/main/default/objects/Case/fields/ForwardedTo__c.field-meta.xml
<CustomField>
    <fullName>ForwardedTo__c</fullName>
    <label>回送先</label>
    <length>20</length>
    <type>Text</type>
</CustomField>