force-app/main/default/objects/Case/fields/Forwarding_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Addressee__c</fullName>
    <label>送付先番地・マンション名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>