force-app/main/default/objects/Case/fields/ForwardingDate__c.field-meta.xml
<CustomField>
    <fullName>ForwardingDate__c</fullName>
    <label>回送日</label>
    <type>Date</type>
</CustomField>