force-app/main/default/objects/Case/fields/FukokuCode__c.field-meta.xml
<CustomField>
    <fullName>FukokuCode__c</fullName>
    <label>富国生命 組織コード（データ連携）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>