force-app/main/default/objects/Case/fields/Greeting__c.field-meta.xml
<CustomField>
    <fullName>Greeting__c</fullName>
    <label>【帳票使用項目】あいさつ文</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>