force-app/main/default/objects/Case/fields/Greeting_Lapse_IncurredLapse__c.field-meta.xml
<CustomField>
    <fullName>Greeting_Lapse_IncurredLapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>挨拶文_罹災失効</label>
    <type>Checkbox</type>
</CustomField>