force-app/main/default/objects/Case/fields/GreetingHosoku__c.field-meta.xml
<CustomField>
    <fullName>GreetingHosoku__c</fullName>
    <label>【帳票使用項目】あいさつ文補足</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>