force-app/main/default/objects/Case/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <label>集団コード（データ連携）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>