force-app/main/default/objects/Case/fields/GroupGroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupGroupName__c</fullName>
    <label>団体集団名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>