force-app/main/default/objects/Case/fields/HasAccident__c.field-meta.xml
<CustomField>
    <fullName>HasAccident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>事故有無</label>
    <type>Checkbox</type>
</CustomField>