force-app/main/default/objects/Case/fields/hasIncomplete_Documents_Victim__c.field-meta.xml
<CustomField>
    <fullName>hasIncomplete_Documents_Victim__c</fullName>
    <formula>INCLUDES(Incomplete_Documents__c,&apos;罹災確認書&apos;)</formula>
    <label>書類不備_罹災確認書あり</label>
    <type>Checkbox</type>
</CustomField>