force-app/main/default/objects/Case/fields/hasMorbidityDocument_Victim__c.field-meta.xml
<CustomField>
    <fullName>hasMorbidityDocument_Victim__c</fullName>
    <formula>INCLUDES(Documents_Document_Shipping__c,&apos;罹災確認書&apos;)</formula>
    <label>書類発送_罹災確認書あり</label>
    <type>Checkbox</type>
</CustomField>