force-app/main/default/objects/Case/fields/HasSpecialOrder__c.field-meta.xml
<CustomField>
    <fullName>HasSpecialOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>通販特約有無</label>
    <type>Checkbox</type>
</CustomField>