force-app/main/default/objects/Case/fields/IncomingTelephoneCallInformation_Time__c.field-meta.xml
<CustomField>
    <fullName>IncomingTelephoneCallInformation_Time__c</fullName>
    <label>計上_入電/発信日時</label>
    <type>DateTime</type>
</CustomField>