force-app/main/default/objects/Case/fields/IncomingTelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>IncomingTelephoneNumber__c</fullName>
    <label>計上_着信電話番号</label>
    <type>Phone</type>
</CustomField>