force-app/main/default/objects/Case/fields/Incomplete_Address__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Address__c</fullName>
    <label>書類不備_送付先住所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>