force-app/main/default/objects/Case/fields/Incomplete_Address_Report__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Address_Report__c</fullName>
    <formula>IF(TEXT(DeficiencyNoticeMailingAddress__c) == &quot;その他&quot;,Incomplete_Address__c,
IF(TEXT(DeficiencyNoticeMailingAddress__c) == &quot;請求者&quot;,MailingAddress__c,
IF(TEXT(DeficiencyNoticeMailingAddress__c) == &quot;契約者&quot;,ContractorAddress__c,&quot;&quot;)))</formula>
    <label>書類不備_送付先住所_帳票用</label>
    <type>Text</type>
</CustomField>