force-app/main/default/objects/Case/fields/Incomplete_Addressee_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Addressee_PersonInCharge__c</fullName>
    <label>書類不備_宛名・担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>