force-app/main/default/objects/Case/fields/Incomplete_Conversation_AttributeOther__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Conversation_AttributeOther__c</fullName>
    <label>書類不備_会話相手属性その他</label>
    <length>80</length>
    <type>Text</type>
</CustomField>