force-app/main/default/objects/Case/fields/Incomplete_Conversation_Person__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Conversation_Person__c</fullName>
    <label>書類不備_会話相手</label>
    <length>255</length>
    <type>Text</type>
</CustomField>