force-app/main/default/objects/Case/fields/Incomplete_CorporationName_Report__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_CorporationName_Report__c</fullName>
    <formula>IF(TEXT(DeficiencyNoticeMailingAddress__c) == &quot;その他&quot;,Incomplete_CorporationName__c,
IF(TEXT(DeficiencyNoticeMailingAddress__c) == &quot;請求者&quot;,AddresseeCorporateName__c,
IF(TEXT(DeficiencyNoticeMailingAddress__c) == &quot;契約者&quot;,&quot;&quot;,&quot;&quot;)))</formula>
    <label>書類不備_宛名法人名_帳票用</label>
    <type>Text</type>
</CustomField>