force-app/main/default/objects/Case/fields/Incomplete_Date_Of_Incoming_Call_Outgoin__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Date_Of_Incoming_Call_Outgoin__c</fullName>
    <label>書類不備_入電/発信日時</label>
    <type>DateTime</type>
</CustomField>