force-app/main/default/objects/Case/fields/Incomplete_Documents__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Documents__c</fullName>
    <label>書類不備_送付書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_content</valueSetName>
    </valueSet>
</CustomField>